# watchmen-connector-server

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  run_app.py
.github/workflows/: docker-image.yml
app_folder/: app.py
build_script/: Dockerfile
connect_server/: app.py  config.py  main.py  run_app.py
connect_server/model/: task.py
connect_server/streamlit/: run.py  strategy_loader.py
connect_server/utils/: sdk.py  tools.py  utils.py  watchmen_streamlit_client.py
model/: task.py
utils/: sdk.py  tools.py  watchmen_streamlit_client.py
