[tool.poetry]
name = "steamlit-server"
version = "0.1.0"
description = ""
authors = ["luke0623 <luke0623@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.11.0"
plotly = "^5.9.0"
watchdog = "^2.1.9"
fastapi = "^0.79.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
